fix: Repair the extractSourceFileElements function and some tests